--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cordova-geocoder",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A simple geocoder for cordova (Android, iOS)",
   "cordova": {
-    "id": "eusebius.cordova.plugin.geocoder",
+    "id": "cordova-geocoder",
     "platforms": [
       "android",
       "ios"
